--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -1,12 +1,18 @@
-//@font-face {
-//  font-family: 'CirceRounded Bold';
-//  src: url('../fonts/CirceRounded-Bold.otf')
-//}
-//
-//@font-face {
-//  font-family: 'CirceRounded Regular';
-//  src: url('../fonts/CirceRounded-Regular.otf')
-//}
+@font-face {
+  font-family: 'DIN-AlternateBold';
+  src: url('./fonts/DIN-Alternate-Bold.otf')
+}
+
+@font-face {
+  font-family: 'ProximaNova-Bold';
+  src: url('./fonts/ProximaNova-Bold.otf')
+}
+
+@font-face {
+  font-family: 'ProximaNova-Regular';
+  src: url('./fonts/ProximaNova-Regular.otf')
+}
+
 //
 //@font-face {
 //  font-family: 'CirceRounded Light';
