--- a/src/components/ui/Buttons/BasicButton/style.scss
+++ b/src/components/ui/Buttons/BasicButton/style.scss
@@ -1,28 +1,39 @@
 .basic-button {
   display: flex;
+  flex: 1;
   cursor: pointer;
   justify-content: center;
-  border: solid 1px #355cf7;
-  border-radius: 20px;
-  padding: 8px 12px 8px 12px;
-  font-size: 17px;
-  font-family: 'Circe-Regular';
-  background-color: #355cf7;
+  border-radius: 15px;
+  font-size: 18px;
+  font-family: 'ProximaNova-Bold';
+  background-color: rgba(99, 206, 255, 0.2);
   color: #ffffff;
-  height: 39px;
+  height: 50px;
+  align-items: center;
+
+  &__img-wrapper {
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
+    background-color: rgba(99, 206, 255, 0.2);
+    margin-right: 12px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+  }
 
   &__img {
-    position: relative;
-    top: 3px;
-    right: 5px;
-    width: 15px;
-    height: 12px;
+    width: 17px;
+    height: 17px;
   }
 
   &__disabled {
-    background-color: #b2bdca;
-    border: 0;
+    div {
+      background-color: rgba(99, 206, 255, 0.1);
+    }
+
+    color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(99, 206, 255, 0.2);
     cursor: not-allowed;
-    color: rgba(255, 255, 255, 0.5)
   }
 }
