--- a/src/components/ui/Buttons/NextButton/style.scss
+++ b/src/components/ui/Buttons/NextButton/style.scss
@@ -9,6 +9,16 @@
   font-size: 18px;
   cursor: pointer;
 
+  &:disabled {
+    color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(176, 118, 255, 0.2);
+    cursor: not-allowed;
+
+    img {
+      opacity: 0.3;
+    }
+  }
+
   &__img {
     width: 11px;
     height: 9px;
