--- a/src/components/ui/Header/style.scss
+++ b/src/components/ui/Header/style.scss
@@ -1,15 +1,58 @@
 .header {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   margin-top: 24px;
   margin-bottom: 15px;
   width: 325px;
   height: 38px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 
-  &__block {
-    width: 120px;
-    height: 14px;
-    background-color: rgba(255, 255, 255, 0.05);
+  &__left {
+    width: 20px;
+    height: 20px;
+  }
+
+  &__center {
+    color: #FFFFFF;
+    font-size: 18px;
+    font-family: 'ProximaNova-Bold';
+
+    &__empty {
+      width: 120px;
+      height: 14px;
+      background-color: rgba(255, 255, 255, 0.05);
+    }
+
+    &__title-wrapper {
+      position: relative;
+      z-index: 1;
+    }
+
+    &__icon-dropdown {
+      margin-left: 7px;
+    }
+  }
+
+  &__right {
+    width: 20px;
+    height: 20px;
+
+    &__icon-settings {
+      opacity: 0.3;
+      cursor: pointer;
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+  }
+
+  &__hide-background {
+    background-color: rgba(0, 0, 0, 0.5);
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    position: absolute;
   }
 }
