add SearchForm and BalanceBlock

--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+  font-family: 'ProximaNova-Extrabold';
+  src: url('./fonts/ProximaNova-Extrabold.otf')
+}
+
+@font-face {
   font-family: 'ProximaNova-Bold';
   src: url('./fonts/ProximaNova-Bold.otf')
 }
