--- a/src/screens/ReceiveScreen/style.scss
+++ b/src/screens/ReceiveScreen/style.scss
@@ -1,6 +1,6 @@
 @import '../../assets/screens.scss';
 
-.send-screen-layout {
+.receive-screen-layout {
   display: flex;
   flex-direction: column;
   justify-content: center;
