--- a/src/assets/fonts.scss
+++ b/src/assets/fonts.scss
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: 'ProximaNova-Extrabold';
-  src: url('./fonts/ProximaNova-Extrabold.otf')
+  src: url('fonts/ProximaNova-Extrabold.otf')
 }
 
 @font-face {
