--- a/src/components/forms/SendForm/style.scss
+++ b/src/components/forms/SendForm/style.scss
@@ -1,5 +1,5 @@
 .send-form-wrapper {
-  margin-top: 40px;
+  margin-top: 20px;
   margin-bottom: 50px;
   display: flex;
   flex-direction: column;
@@ -13,7 +13,6 @@
   position: relative;
   box-sizing: border-box;
   padding: 20px;
-  z-index: 1;
 
   &__title {
     margin-top: 30px;
@@ -26,5 +25,27 @@
   input::placeholder {
     font-family: 'ProximaNova-Regular';
     color: rgba(255, 255, 255, 0.6)
+  }
+
+
+
+  &__fee {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 20px;
+    font-family: 'ProximaNova-Regular';
+    font-size: 14px;
+
+    &__left {
+      color: rgba(255, 255, 255, 0.4);
+    }
+
+    &__left-fee {
+      color: rgba(255, 255, 255, 0.6);
+    }
+
+    &__right {
+      color: #FFFFFF;
+    }
   }
 }
