--- a/src/components/ui/Fields/CopyField/style.scss
+++ b/src/components/ui/Fields/CopyField/style.scss
@@ -13,7 +13,7 @@
     display: flex;
     flex: 1;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    padding-bottom: 5px;
+    padding: 5px 0;
   }
 
   &__input {
