--- a/src/components/ui/BalanceBlock/style.scss
+++ b/src/components/ui/BalanceBlock/style.scss
@@ -28,9 +28,8 @@
   &__title {
     display: flex;
     align-items: center;
-    justify-content: center;
     min-height: 20px;
-    width: 108px;
+    padding: 0 10px;
     letter-spacing: 2px;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.15);
