--- a/src/components/ui/Fields/BasicField/style.scss
+++ b/src/components/ui/Fields/BasicField/style.scss
@@ -1,6 +1,7 @@
 .basic-field {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   height: 48px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   box-sizing: border-box;
