--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -6,6 +6,39 @@ body {
   overflow-x:hidden;
   background: rgba(13,24,57,1);
   background: linear-gradient(to bottom, rgba(13,24,57,1) 100%, rgba(8,16,36,1) 100%);
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba(0,0,0,0);
+  }
+
+  &::-webkit-scrollbar {
+    width: 8px; /* 1px wider than Lion. */
+
+    /* This is more usable for users trying to click it. */
+    //background-color: rgba(0,0,0,0);
+    background: rgba(13, 24, 57, 1);
+    -webkit-border-radius: 0;
+  }
+
+  /* The scrollbar 'thumb' ...that marque oval shape in a scrollbar */
+  &::-webkit-scrollbar-thumb:vertical {
+    /* This is the EXACT color of Mac OS scrollbars.
+       Yes, I pulled out digital color meter */
+    background: rgba(255, 255, 255, .15);
+    //background-color: #747474;
+    -webkit-border-radius: 100px;
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    //background: #4C4C4C;
+    background: rgba(255, 255, 255, .2);
+  }
+
+  &::-webkit-scrollbar-thumb:vertical:active {
+    background: rgba(255, 255, 255, .25);
+    //background: #505050; /* Some darker color when you click it */
+    -webkit-border-radius: 100px;
+  }
 }
 
 button {
