--- a/src/components/forms/ProtectAccountForm/style.scss
+++ b/src/components/forms/ProtectAccountForm/style.scss
@@ -7,19 +7,13 @@
   flex: 1;
   flex-direction: column;
   background: rgba(62,25,87,1);
-  background: linear-gradient(45deg, rgba(62,25,87,1) 0%, rgba(32,101,130,1) 100%);
+  background: url("../../../assets/img/background-form.png") bottom no-repeat, linear-gradient(45deg, rgba(62,25,87,1) 0%, rgba(32,101,130,1) 100%);
   margin-bottom: 20px;
   border-radius: 20px;
   height: 248px;
   position: relative;
-  box-sizing: content-box;
-
-  &__background {
-    flex: 1;
-    border-radius: 20px;
-    padding: 20px;
-    background: url("../../../assets/img/background-form.png") no-repeat 0 0;
-  }
+  box-sizing: border-box;
+  padding: 20px;
 
   &__title {
     margin-top: 20px;
@@ -27,6 +21,13 @@
     font-size: 18px;
     color: #FFFFFF;
     text-align: center;
+  }
+
+  &__error {
+    margin-top: 10px;
+    font-family: 'ProximaNova-Regular';
+    font-size: 13px;
+    color: rgba(255, 0, 0, 0.6);
   }
 
   input::placeholder {
