--- a/src/components/ui/Buttons/BasicButton/style.scss
+++ b/src/components/ui/Buttons/BasicButton/style.scss
@@ -26,7 +26,6 @@
 
 .basic-button {
   display: flex;
-  flex: 1;
   cursor: pointer;
   justify-content: center;
   border-radius: 15px;
@@ -35,6 +34,7 @@
   color: #ffffff;
   height: 50px;
   align-items: center;
+  width: 100%;
 
   &__img-wrapper {
     width: 30px;
