--- a/src/components/ui/Buttons/WalletButton/style.scss
+++ b/src/components/ui/Buttons/WalletButton/style.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex: 1;
   align-items: center;
-  height: 70px;
+  min-height: 70px;
   box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.05);
   border-radius: 20px;
