--- a/src/components/ui/СurrencyCard/style.scss
+++ b/src/components/ui/СurrencyCard/style.scss
@@ -62,6 +62,7 @@
   &__button {
     display: flex;
     justify-content: center;
+    align-items: center;
     margin-top: 14px;
     border-radius: 5px;
     background-color: rgba(255, 255, 255, 0.1);
