--- a/src/components/ui/Buttons/TransparentButton/style.scss
+++ b/src/components/ui/Buttons/TransparentButton/style.scss
@@ -6,6 +6,7 @@
   font-size: 18px;
   font-family: 'ProximaNova-Bold';
   color: #ffffff;
+  width: 100%;
   height: 50px;
   align-items: center;
   background-color: transparent;
