--- a/src/components/ui/Fields/BasicField/style.scss
+++ b/src/components/ui/Fields/BasicField/style.scss
@@ -28,6 +28,7 @@
     &__input {
       background: transparent;
       flex: 1;
+      min-width: 20px;
       font-family: 'ProximaNova-Regular';
       font-size: 16px;
       color: rgba(255, 255, 255, 0.6);
