--- a/src/components/forms/ChangePasswordForm/style.scss
+++ b/src/components/forms/ChangePasswordForm/style.scss
@@ -3,6 +3,15 @@
   flex: 1;
   flex-direction: column;
   margin-top: 35px;
+
+  &__error {
+    margin-top: -10px;
+    margin-bottom: 10px;
+    font-family: 'ProximaNova-Regular';
+    font-size: 13px;
+    color: rgba(255, 0, 0, 0.6);
+    text-align: center;
+  }
 }
 
 .change-password-form {
