--- a/src/components/ui/Buttons/WalletButton/style.scss
+++ b/src/components/ui/Buttons/WalletButton/style.scss
@@ -71,7 +71,7 @@
       font-family: 'ProximaNova-Regular';
       font-size: 14px;
 
-      &__wallet-full-name {
+      &__wallet-address {
         display: block;
         white-space: nowrap;
         overflow: hidden;
