--- a/src/components/ui/СurrencyCard/style.scss
+++ b/src/components/ui/СurrencyCard/style.scss
@@ -46,7 +46,7 @@
     }
   }
 
-  &__course {
+  &__balance {
     font-size: 18px;
     font-family: 'ProximaNova-Extrabold';
     margin-top: 20px;
@@ -70,7 +70,7 @@
     color: #FFFFFF;
     font-family: 'ProximaNova-Bold';
     cursor: pointer;
-    height: 30px;
+    min-height: 30px;
 
     &:hover {
       background-color: rgba(255, 255, 255, 0.3);
