--- a/src/components/ui/Buttons/BasicButton/style.scss
+++ b/src/components/ui/Buttons/BasicButton/style.scss
@@ -1,25 +1,25 @@
 .purple {
   background-color: rgba(176, 118, 255, 0.2);
-  &:hover, &:hover div {
+  &:hover, &:hover .img-wrapper {
     background-color: rgba(176, 118, 255, 0.3);
   }
-  div {
+  .img-wrapper {
     background-color: rgba(176, 118, 255, 0.2);
   }
-  &:disabled div {
+  &:disabled .img-wrapper {
     background-color: rgba(176, 118, 255, 0.3);
   }
 }
 
 .blue {
   background-color: rgba(99, 206, 255, 0.2);
-  &:hover, &:hover div {
+  &:hover, &:hover .img-wrapper {
     background-color: rgba(99, 206, 255, 0.3);
   }
-  div {
+  .img-wrapper {
     background-color: rgba(99, 206, 255, 0.2);
   }
-  &:disabled div {
+  &:disabled .img-wrapper {
     background-color: rgba(99, 206, 255, 0.3);
   }
 }
