--- a/src/screens/OverviewScreen/style.scss
+++ b/src/screens/OverviewScreen/style.scss
@@ -1,6 +1,6 @@
 @import '../../assets/screens.scss';
 
-.wallet-screen-layout {
+.overview-screen-layout {
   display: flex;
   flex-direction: column;
   justify-content: center;
