--- a/src/components/ui/BalanceBlock/style.scss
+++ b/src/components/ui/BalanceBlock/style.scss
@@ -11,6 +11,21 @@
   background: url("../../../assets/img/background-form.png") bottom no-repeat, linear-gradient(45deg, rgba(62,25,87,1) 0%, rgba(32,101,130,1) 100%);
   position: relative;
 
+  &__badge {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: -20px;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    width: 40px;
+    height: 40px;
+    border-radius: 15px;
+  }
+
   &__icon-trash {
     position: absolute;
     top: 20px;
