--- a/src/components/forms/NewWalletForm/style.scss
+++ b/src/components/forms/NewWalletForm/style.scss
@@ -12,6 +12,13 @@
     color: black;
   }
 
+  &__description {
+    margin-top: 14px;
+    font-family: 'ProximaNova-Regular';
+    font-size: 12px;
+    color: rgba(0, 0, 0, 0.5);
+  }
+
   input::placeholder {
     color: rgba(0, 0, 0, 0.7)
   }
