--- a/src/screens/OverviewScreen/style.scss
+++ b/src/screens/OverviewScreen/style.scss
@@ -12,10 +12,22 @@
     flex-wrap: wrap;
     justify-content: space-between;
 
+    font-family: 'ProximaNova-Regular';
+    font-size: 15px;
+    color: #FFFFFF;
+
+    &__text {
+      margin-top: 30px;
+    }
+    &__text-bold {
+      font-family: 'ProximaNova-Bold';
+    }
     &__loading-wrapper {
       display: flex;
+      flex-direction: column;
       flex: 1;
       justify-content: center;
+      align-items: center;
       margin-top: 20px;
       margin-bottom: -20px;
     }
